# main

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
example/: CMakeLists.txt  main.c  main.cpp
glug_main/: CMakeLists.txt
glug_main/include/glug/: main.h
glug_main/src/: CMakeLists.txt  glug_main.c  win_main.c
test/: CMakeLists.txt  main.c  winmain.c
